Review code and test code, add attribute for bookrate ( account)